--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
             <input type="button" id="btn_add" value="Agregar">
         </form>
     </div>
+    <div>
+        <h2>Lista</h2>
+        <table>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Edad</th>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+                <th>4</th>
+                <th>5</th>
+                <th>6</th>
+                <th>7</th>
+                <th>8</th>
+                <th>9</th>
+                <th>10</th>
+            </tr>
+            <tbody id="tbody"></tbody>
+        </table>
+    </div>
 <script src="./simulator.js"></script>
 </body>
 </html>
